--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,9 @@ jobs:
       
       - name: Install Dependencies
         run: npm install
+         
+      - name: generate prisma client
+        run: npx run db:generate
 
 
       - name: Run Build
