--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./docker/Dockerfile
+        file: ./docker/Dockerfile.user
         push: true
         tags: sonusharma05/cicd:latest  # Replace with your Docker Hub username and repository
 
